// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for type="Completed" & isSystemAdmin=false 1`] = `
<div
  className="indexation-notification-wrapper"
>
  <Alert
    className="indexation-notification-banner"
    display="banner"
    variant="success"
  >
    <div
      className="display-flex-center"
    >
      <span
        className="spacer-right"
      >
        indexation.completed
      </span>
    </div>
  </Alert>
</div>
`;

exports[`should render correctly for type="Completed" & isSystemAdmin=true 1`] = `
<div
  className="indexation-notification-wrapper"
>
  <Alert
    className="indexation-notification-banner"
    display="banner"
    variant="success"
  >
    <div
      className="display-flex-center"
    >
      <span
        className="spacer-right"
      >
        indexation.completed
      </span>
    </div>
  </Alert>
</div>
`;

exports[`should render correctly for type="CompletedWithFailure" & isSystemAdmin=false 1`] = `
<div
  className="indexation-notification-wrapper"
>
  <Alert
    className="indexation-notification-banner"
    display="banner"
    variant="error"
  >
    <div
      className="display-flex-center"
    >
      <span
        className="spacer-right"
      >
        <FormattedMessage
          defaultMessage="indexation.completed_with_error"
          id="indexation.completed_with_error"
          values={
            {
              "link": "indexation.completed_with_error.link",
            }
          }
        />
      </span>
    </div>
  </Alert>
</div>
`;

exports[`should render correctly for type="CompletedWithFailure" & isSystemAdmin=true 1`] = `
<div
  className="indexation-notification-wrapper"
>
  <Alert
    className="indexation-notification-banner"
    display="banner"
    variant="error"
  >
    <div
      className="display-flex-center"
    >
      <span
        className="spacer-right"
      >
        <FormattedMessage
          defaultMessage="indexation.completed_with_error"
          id="indexation.completed_with_error"
          values={
            {
              "link": <ForwardRef(Link)
                to={
                  {
                    "pathname": "/admin/background_tasks",
                    "search": "?taskType=ISSUE_SYNC&status=FAILED",
                  }
                }
              >
                indexation.completed_with_error.link
              </ForwardRef(Link)>,
            }
          }
        />
      </span>
    </div>
  </Alert>
</div>
`;

exports[`should render correctly for type="InProgress" & isSystemAdmin=false 1`] = `
<div
  className="indexation-notification-wrapper"
>
  <Alert
    className="indexation-notification-banner"
    display="banner"
    variant="warning"
  >
    <div
      className="display-flex-center"
    >
      <span
        className="spacer-right"
      >
        indexation.in_progress
      </span>
      <i
        className="spinner spacer-right"
      />
      <span
        className="spacer-right"
      >
        indexation.progression.25
      </span>
    </div>
  </Alert>
</div>
`;

exports[`should render correctly for type="InProgress" & isSystemAdmin=true 1`] = `
<div
  className="indexation-notification-wrapper"
>
  <Alert
    className="indexation-notification-banner"
    display="banner"
    variant="warning"
  >
    <div
      className="display-flex-center"
    >
      <span
        className="spacer-right"
      >
        indexation.in_progress
      </span>
      <i
        className="spinner spacer-right"
      />
      <span
        className="spacer-right"
      >
        indexation.progression.25
      </span>
      <span
        className="spacer-right"
      >
        <FormattedMessage
          defaultMessage="indexation.admin_link"
          id="indexation.admin_link"
          values={
            {
              "link": <ForwardRef(Link)
                to={
                  {
                    "pathname": "/admin/background_tasks",
                    "search": "?taskType=ISSUE_SYNC",
                  }
                }
              >
                background_tasks.page
              </ForwardRef(Link)>,
            }
          }
        />
      </span>
    </div>
  </Alert>
</div>
`;

exports[`should render correctly for type="InProgressWithFailure" & isSystemAdmin=false 1`] = `
<div
  className="indexation-notification-wrapper"
>
  <Alert
    className="indexation-notification-banner"
    display="banner"
    variant="error"
  >
    <div
      className="display-flex-center"
    >
      <span
        className="spacer-right"
      >
        indexation.in_progress
      </span>
      <i
        className="spinner spacer-right"
      />
      <span
        className="spacer-right"
      >
        <FormattedMessage
          defaultMessage="indexation.progression_with_error.25"
          id="indexation.progression_with_error"
          values={
            {
              "link": "indexation.progression_with_error.link",
            }
          }
        />
      </span>
    </div>
  </Alert>
</div>
`;

exports[`should render correctly for type="InProgressWithFailure" & isSystemAdmin=true 1`] = `
<div
  className="indexation-notification-wrapper"
>
  <Alert
    className="indexation-notification-banner"
    display="banner"
    variant="error"
  >
    <div
      className="display-flex-center"
    >
      <span
        className="spacer-right"
      >
        indexation.in_progress
      </span>
      <i
        className="spinner spacer-right"
      />
      <span
        className="spacer-right"
      >
        <FormattedMessage
          defaultMessage="indexation.progression_with_error.25"
          id="indexation.progression_with_error"
          values={
            {
              "link": <ForwardRef(Link)
                to={
                  {
                    "pathname": "/admin/background_tasks",
                    "search": "?taskType=ISSUE_SYNC&status=FAILED",
                  }
                }
              >
                indexation.progression_with_error.link
              </ForwardRef(Link)>,
            }
          }
        />
      </span>
    </div>
  </Alert>
</div>
`;
